--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,27 @@ table, td, th {
     padding: 0;
 }
 
-th, td {
-    padding: 1px;
+
+body {
+    min-height: 100vh;
+
+    justify-content: center;
+    align-items: center;
 }
 
+.table_header {
+    width: 100%;
+    height: 10%;
+    padding: .9rem 1rem;
+}
 
+.table_body {
+    overflow: auto;
+}
 
-
-
-
+table, th, td {
+    padding: 1rem;
+}
 
 html {
     height:100% ;
