--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 }
 
 .table_header {
+    margin-top: 10px;
     width: 100%;
     height: 10%;
     padding: .9rem 1rem;
@@ -40,7 +41,6 @@ table, th, td {
 
 html {
     height:100% ;
-    overflow: hidden;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 
 }
