--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,40 @@ table tr:first-child {
   background-color: #23808289;
 }
 
+tr.highlight td:nth-child(4) {
+  background-color: #2ea1a389;
+}
+
+tr.highlight td:nth-child(8) {
+  background-color: #2ea1a389;
+}
+
 /*--------------------------------------*/
+
+
+/*----------Tombol Stiky---------*/
+
+#sticky-btn {
+  font-family: 'Barlow', sans-serif;
+  background-color: #298694b6;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  font-size: 12px;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  cursor: pointer;
+}
+
+
+
+/*--------------------------------------*/
+
+
 
 
 
